<resources>
    <string name="app_name">Dc Comics</string>
    <string name="superman">Superman</string>
    <string name="name">Clark Kent, kal - El</string>
    <string name="power_superman">súper fuerza, vuelo, invulnerabilidad, súper velocidad, visión de calor, aliento congelado, visión de rayos X, audición sobrehumana, factor de curación</string>
    <string name="power_title">Poderes:</string>
    <string name="registro_titulo">Registrar un Super Hero</string>
    <string name="name_superhero">Nombre del super Hero</string>
    <string name="btn_register">Registrar</string>
    <string name="height">Estatura</string>
    <string name="info">"Nombre: %s,\n Estatura: %f,\n Genero: %s,\n Poderes: %s,\n Ciudad de nacimiento: %s"</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="powers">Poderes</string>
    <string name="super_strength">Super Fuerza</string>
    <string name="speed">Super Velocidad</string>
    <string name="telepatia">Telepatía</string>
    <string name="ciudad_nacimiento">Ciudad de nacimiento</string>

</resources>